--- a/index.html
+++ b/index.html
@@ -1,75 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <link rel="stylesheet" href="styling/headfoot.css" />
-  <link rel="stylesheet" href="styling/prostyle.css" />
-</head>
-
-<body>
-
-  <header>
-    <div id="myNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <div class="overlay-content">
-        <a href="#">Cart</a>
-        <a href="#">Product</a>
-        <a href="#">Delivery</a>
-        <a href="#">Feedback</a>
-        <a href="#">Membership</a>
-        <a href="#">About Us</a>
-      </div>
-    </div>
-    <span style="cursor: pointer;" onclick="openNav()">&#9776;</span>
-
-    <nav class="topnav">
-      <div id="logo">
-        <!--用logo来做homepage键image link-->
-        <a href="Home" title="Home"><img src="images/logo.jpg" alt="Home Page"></a>
-        <h1>Piglets</h1>
-      </div>
-
-      <ul>
-        <li> <a href="product_new.html">PRODUCT</a> </li>
-        <li> <a href="#">DELIVERY</a> </li>
-        <li> <a href="#">FEEDBACK</a> </li>
-        <li> <a href="#">MEMBERSHIP</a> </li>
-        <li> <a href="cart.html">ABOUT US</a> </li>
-      </ul>
-      <div id="cart">
-        <a href="#" title="Cart"><img src="images/cart.png" alt="Shopping Cart"></a>
-      </div>
-
-      <div id="darkmode">
-        <button onclick="darkMode()" id="dark-mode" title="Dark Mode"><img id="dark-image" src="images/dark.png"
-            alt="Dark Mode" /></button>
-      </div>
-    </nav>
-    <!--cart的image link, 连去payment-->
-  </header>
-  <footer>
-    <div>
-      <a href="#">product</a>
-      <a href="#">delivery</a>
-      <a href="#">feedback</a>
-      <a href="#">membership</a>
-      <a href="cart.html">about us</a>
-
-    </div>
-    <div class="whatsapp">
-      <img src="images/whatsappIcon.png" alt="whatsapp" />
-    </div>
-  </footer>
-  <div class="back2top">
-    <a href="#">
-      BACK TO THE TOP</a>
-  </div>
-
-</body>
-<script src="function/main.js"></script>
-<script src="function/profunction.js"></script>
-
-</html>
+html
