--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-html
+<!DOCTYPE html>
+
+  <html>
+    <head>
+      <title>PortFolio</title>
+      <meta charset="utf-8"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1"/>
+      <link href="" rel=stylesheet"/>
+      
+    </head>
+
+    <body>
+      <div>
+        
+      </div>
+    </body>
+  </html>
+</DOCTYPE>
