--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-
-  <html>
-    <head>
-      <title>PortFolio</title>
-      <meta charset="utf-8"/>
-      <meta name="viewport" content="width=device-width, initial-scale=1"/>
-      <link href="" rel=stylesheet"/>
-      
-    </head>
-
-    <body>
-      <div>
-        <h1>EFG</h1>
-      </div>
-    </body>
-  </html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Welcome to our website!</h1>
+        <p>This is the homepage of our website. Feel free to browse around and learn more about us.</p>
+    </main>
+    <footer>
+        <p>Copyright &copy; 2022. All rights reserved.</p>
+    </footer>
+</body>
+</html>
