--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
 
         .navbar {
             background-color: #333;
-            overflow: hidden;
-            position: sticky;
-            top: 0;
+            display: flex;
+            justify-content: center;
         }
 
         .navbar a {
-            float: left;
-            display: block;
             color: #f2f2f2;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
+            font-family: 'Courier New', Courier, monospace;
         }
 
         .navbar a:hover {
