--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             padding: 14px 16px;
             text-decoration: none;
             font-family: 'Courier New', Courier, monospace;
+            transition: background-color 0.5s ease; /* Add this line */
         }
 
         .navbar a:hover {
