--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             background-color: #333;
             display: flex;
             justify-content: center;
+            position: sticky; /* Add this line */
+            top: 0; /* Add this line */
+            z-index: 100; /* Add this line */
         }
 
         .navbar a {
