--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             padding: 14px 16px;
             text-decoration: none;
             font-family: 'Courier New', Courier, monospace;
-            transition: background-color 0.5s ease; /* Add this line */
+            transition: background-color 0.5s ease, color 0.5s ease; /* Modify this line */
         }
 
         .navbar a:hover {
             background-color: #ddd;
-            color: black;
+            color: red;
         }
     </style>
 </head>
