--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             justify-content: center;
             position: sticky; /* Add this line */
             top: 0; /* Add this line */
-            z-index: 100; /* Add this line */
+            z-index: 100; /* Add this line */        
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
         }
 
         .navbar a {
@@ -28,12 +29,14 @@
             padding: 14px 16px;
             text-decoration: none;
             font-family: 'Courier New', Courier, monospace;
-            transition: background-color 0.5s ease, color 0.5s ease; /* Modify this line */
+            transition: background-color 0.5s ease, color 0.5s ease, transform 0.5s ease; /* Modify this line */
         }
 
         .navbar a:hover {
             background-color: #ddd;
-            color: red;
+            color: red;            
+            transform: scale(1.1); /* Add this line */
+
         }
     </style>
 </head>
