--- a/index.html
+++ b/index.html
@@ -41,17 +41,35 @@
     </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-    </div>
+    <header>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
     <main>
-        <h1>Welcome to our website!</h1>
-        <p>This is the homepage of our website. Feel free to browse around and learn more about us.</p>
+        <section id="about">
+            <h1>About Me</h1>
+            <p>Hi, I'm [Your Name]. I'm a [Your Job Title] with experience in [Your Skills].</p>
+        </section>
+        <section id="projects">
+            <h1>Projects</h1>
+            <!-- Repeat this block for each project -->
+            <div class="project">
+                <h2>Project Name</h2>
+                <p>Project description...</p>
+                <a href="project-link.html">View Project</a>
+            </div>
+            <!-- End of block -->
+        </section>
+        <section id="contact">
+            <h1>Contact Me</h1>
+            <p>You can reach me at [Your Email] or follow me on [Your Social Media].</p>
+        </section>
     </main>
     <footer>
-        <p>Copyright &copy; 2022. All rights reserved.</p>
+        <p>Copyright &copy; 2022 [Your Name]. All rights reserved.</p>
     </footer>
 </body>
 </html>
