--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="navbar">
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
