--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
     </style>
 </head>
 <body>
-    <header>
-        <nav id="navbar">
+
+        <div id="navbar">
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
-        </nav>
-    </header>
+        </div>
     <main>
         <section id="about">
             <h1>About Me</h1>
