--- a/index.html
+++ b/index.html
@@ -71,5 +71,13 @@
     <footer>
         <p>Copyright &copy; 2022 [Your Name]. All rights reserved.</p>
     </footer>
+    <flowise-fullchatbot></flowise-fullchatbot>
+<script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.initFull({
+        chatflowid: "07a51c7f-9f53-442a-80be-c2186f21b3d7",
+        apiHost: "https://flowiseai-railway-production-c85e.up.railway.app",
+    })
+</script>
 </body>
 </html>
