--- a/index.html
+++ b/index.html
@@ -3,146 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Full Page Chatbot</title>
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            font-family: Arial, sans-serif;
+        }
+
         body {
             background-image: url('your-image.jpg');
             background-repeat: no-repeat;
             background-size: cover;
-            margin: 0;
-            font-family: Arial, sans-serif;
         }
 
         .navbar {
             background-color: #333;
             display: flex;
             justify-content: center;
-            position: sticky; /* Add this line */
-            top: 0; /* Add this line */
-            z-index: 100; /* Add this line */        
+            position: sticky;
+            top: 0;
+            z-index: 100;       
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
         }
 
         .navbar a {
             color: #f2f2f2;
-            text-align: center;
             padding: 14px 16px;
             text-decoration: none;
             font-family: 'Courier New', Courier, monospace;
-            transition: background-color 0.5s ease, color 0.5s ease, transform 0.5s ease; /* Modify this line */
+            transition: background-color 0.5s ease, color 0.5s ease, transform 0.5s ease;
         }
 
         .navbar a:hover {
             background-color: #ddd;
             color: red;            
-            transform: scale(1.1); /* Add this line */
+            transform: scale(1.1);
+        }
 
+        flowise-fullchatbot {
+            height: calc(100% - 50px);
+            width: 100%;
+            display: block;
         }
     </style>
-<link href=“home.css” rel=“stylesheet”/>
 </head>
 <body>
-<flowise-fullchatbot></flowise-fullchatbot>
-<script type="module">
-    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
-    Chatbot.initFull({
-        chatflowid: "07a51c7f-9f53-442a-80be-c2186f21b3d7",
-        apiHost: "https://flowiseai-railway-production-c85e.up.railway.app",
-        chatflowConfig: {
-            /* Chatflow Config */
-        },
-        observersConfig: {
-            /* Observers Config */
-        },
-        theme: {
-            button: {
-                backgroundColor: '#3B81F6',
-                right: 20,
-                bottom: 20,
-                size: 48,
-                dragAndDrop: true,
-                iconColor: 'white',
-                customIconSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
-                autoWindowOpen: {
-                    autoOpen: true,
-                    openDelay: 2,
-                    autoOpenOnMobile: false
-                }
-            },
-            tooltip: {
-                showTooltip: true,
-                tooltipMessage: 'Hi There 👋!',
-                tooltipBackgroundColor: 'black',
-                tooltipTextColor: 'white',
-                tooltipFontSize: 16
-            },
-            disclaimer: {
-                title: 'Disclaimer',
-                message: "By using this chatbot, you agree to the <a target=\"_blank\" href=\"https://flowiseai.com/terms\">Terms & Condition</a>",
-                textColor: 'black',
-                buttonColor: '#3b82f6',
-                buttonText: 'Start Chatting',
-                buttonTextColor: 'white',
-                blurredBackgroundColor: 'rgba(0, 0, 0, 0.4)',
-                backgroundColor: 'white'
-            },
-            customCSS: ``,
-            chatWindow: {
-                showTitle: true,
-                showAgentMessages: true,
-                title: 'Flowise Bot',
-                titleAvatarSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
-                welcomeMessage: 'Hello! This is custom welcome message',
-                errorMessage: 'This is a custom error message',
-                backgroundColor: '#ffffff',
-                backgroundImage: 'enter image path or link',
-                height: '100%',
-                width: '100%',
-                fontSize: 16,
-                clearChatOnReload: false,
-                sourceDocsTitle: 'Sources:',
-                renderHTML: true,
-                botMessage: {
-                    backgroundColor: '#f7f8ff',
-                    textColor: '#303235',
-                    showAvatar: true,
-                    avatarSrc: 'https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/parroticon.png'
-                },
-                userMessage: {
-                    backgroundColor: '#3B81F6',
-                    textColor: '#ffffff',
-                    showAvatar: true,
-                    avatarSrc: 'https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/usericon.png'
-                },
-                textInput: {
-                    placeholder: 'Type your question',
-                    backgroundColor: '#ffffff',
-                    textColor: '#303235',
-                    sendButtonColor: '#3B81F6',
-                    maxChars: 50,
-                    maxCharsWarningMessage: 'You exceeded the characters limit. Please input less than 50 characters.',
-                    autoFocus: true,
-                    sendMessageSound: true,
-                    sendSoundLocation: 'send_message.mp3',
-                    receiveMessageSound: true,
-                    receiveSoundLocation: 'receive_message.mp3'
-                },
-                feedback: {
-                    color: '#303235'
-                },
-                dateTimeToggle: {
-                    date: true,
-                    time: true
-                },
-                footer: {
-                    textColor: '#303235',
-                    text: 'Powered by',
-                    company: 'Flowise',
-                    companyLink: 'https://flowiseai.com'
+    <div class="navbar">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </div>
+    <flowise-fullchatbot></flowise-fullchatbot>
+    <script type="module">
+        import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js";
+        Chatbot.initFull({
+            chatflowid: "07a51c7f-9f53-442a-80be-c2186f21b3d7",
+            apiHost: "https://flowiseai-railway-production-c85e.up.railway.app",
+            theme: {
+                button: { autoWindowOpen: { autoOpen: true, openDelay: 2 } },
+                chatWindow: {
+                    height: '100%',
+                    width: '100%'
                 }
             }
-        }
-    })
-</script>
+        });
+    </script>
 </body>
 </html>
