--- a/index.html
+++ b/index.html
@@ -51,25 +51,13 @@
     </style>
 </head>
 <body>
-    <div class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-    </div>
-    <flowise-fullchatbot></flowise-fullchatbot>
-    <script type="module">
-        import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js";
-        Chatbot.initFull({
-            chatflowid: "07a51c7f-9f53-442a-80be-c2186f21b3d7",
-            apiHost: "https://flowiseai-railway-production-c85e.up.railway.app",
-            theme: {
-                button: { autoWindowOpen: { autoOpen: true, openDelay: 2 } },
-                chatWindow: {
-                    height: '100%',
-                    width: '100%'
-                }
-            }
-        });
-    </script>
+<flowise-fullchatbot></flowise-fullchatbot>
+<script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.initFull({
+        chatflowid: "07a51c7f-9f53-442a-80be-c2186f21b3d7",
+        apiHost: "https://flowiseai-railway-production-c85e.up.railway.app",
+    })
+</script>
 </body>
 </html>
