--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     Chatbot.initFull({
         chatflowid: "ea607b64-1211-4e67-b212-f3fbfb4a4754",
         apiHost: "https://flowiseai-railway-production-c85e.up.railway.app",
+        chatflowConfig: "sessionId": "123",
     })
 </script>
 </body>
