--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       }
       
       // Optionally clear any locally cached chat history (if Flowise uses localStorage)
-      localStorage.removeItem('flowise-chat-history');
+      localStorage.removeItem('ea607b64-1211-4e67-b212-f3fbfb4a4754_EXTERNAL');
 
       // Create a new chatbot element and add it to the container
       const newChatbot = document.createElement('flowise-fullchatbot');
