--- a/index.html
+++ b/index.html
@@ -102,54 +102,111 @@
         <input type="text" id="username" required>
         <label for="email">Email:</label>
         <input type="email" id="email" required>
-        <button type="submit">Start Chat</button>
+        <label for="password">Password:</label>
+        <input type="password" id="password" required>
+        <button id="loginBtn" type="button">Login</button>
+        <button id="registerBtn" type="button">Register</button>
       </form>
     </div>
   </div>
 
   <!-- Placeholder for the Chatbot Element -->
   <div id="chatbotContainer"></div>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-  <script type="module">
-    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js";
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyDbr6j7NvPzIfM9bSpBVH2clyfu-yVZeSE",
+    authDomain: "iotp7-3ff5c.firebaseapp.com",
+    databaseURL: "https://iotp7-3ff5c-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "iotp7-3ff5c",
+    storageBucket: "iotp7-3ff5c.appspot.com",
+    messagingSenderId: "370001518325",
+    appId: "1:370001518325:web:88bd218007349d5c396fbc",
+    measurementId: "G-JH0LFPW092"
+  };
 
-    document.getElementById('userForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      
-      // Retrieve values from the form
-      const username = document.getElementById('username').value;
-      const email = document.getElementById('email').value;
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+<script type="module">
+  import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js";
 
-      // Hide the modal popup
-      document.getElementById('userModal').style.display = 'none';
+  const loginBtn = document.getElementById('loginBtn');
+  const registerBtn = document.getElementById('registerBtn');
 
-      // Remove any existing chatbot element to clear previous history
-      const existingChatbot = document.querySelector('flowise-fullchatbot');
-      if (existingChatbot) {
-        existingChatbot.remove();
+  const showChatbot = async (user) => {
+    const username = user.email.split('@')[0];
+
+    // Save preferences in Firestore (if needed)
+    const userDoc = db.collection("users").doc(user.uid);
+    await userDoc.set({
+      email: user.email,
+      username: username,
+      preferences: {
+        mood: "neutral",
+        goal: "healthy lifestyle"
       }
-      
-      // Optionally clear any locally cached chat history (if Flowise uses localStorage)
-      localStorage.removeItem('ea607b64-1211-4e67-b212-f3fbfb4a4754_EXTERNAL');
+    }, { merge: true });
 
-      // Create a new chatbot element and add it to the container
-      const newChatbot = document.createElement('flowise-fullchatbot');
-      newChatbot.style.display = 'block';
-      document.getElementById('chatbotContainer').appendChild(newChatbot);
+    // Hide modal
+    document.getElementById('userModal').style.display = 'none';
 
-      // Initialize the chatbot with extra configuration data
-      Chatbot.initFull({
-        chatflowid: "ea607b64-1211-4e67-b212-f3fbfb4a4754",
-        apiHost: "https://flowiseai-railway-production-c85e.up.railway.app",
-        chatflowConfig: {
-          sessionId: username,  // Using username as the session ID for uniqueness
-          vars: {
-            username: username,
-            email: email
-          }
+    // Remove previous chatbot
+    const existingChatbot = document.querySelector('flowise-fullchatbot');
+    if (existingChatbot) existingChatbot.remove();
+    localStorage.removeItem('ea607b64-1211-4e67-b212-f3fbfb4a4754_EXTERNAL');
+
+    // Launch chatbot
+    const newChatbot = document.createElement('flowise-fullchatbot');
+    newChatbot.style.display = 'block';
+    document.getElementById('chatbotContainer').appendChild(newChatbot);
+
+    Chatbot.initFull({
+      chatflowid: "ea607b64-1211-4e67-b212-f3fbfb4a4754",
+      apiHost: "https://flowiseai-railway-production-c85e.up.railway.app",
+      chatflowConfig: {
+        sessionId: username,
+        vars: {
+          username: username,
+          email: user.email
         }
-      });
+      }
     });
-  </script>
+  };
+
+  loginBtn.addEventListener('click', async () => {
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+
+    try {
+      const userCredential = await auth.signInWithEmailAndPassword(email, password);
+      showChatbot(userCredential.user);
+    } catch (err) {
+      alert("Login error: " + err.message);
+    }
+  });
+
+  registerBtn.addEventListener('click', async () => {
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+
+    try {
+      const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+      showChatbot(userCredential.user);
+    } catch (err) {
+      alert("Registration error: " + err.message);
+    }
+  });
+</script>
+
+
+  
 </body>
 </html>
