--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
       document.getElementById('chatbotContainer').appendChild(newChatbot);
 
       Chatbot.initFull({
-        chatflowid: "ea607b64-1211-4e67-b212-f3fbfb4a4754",
-        apiHost: "https://flowiseai-railway-production-c85e.up.railway.app",
+        chatflowid: "30ff8574-4b92-41b8-840e-d12b4ad05308",
+        apiHost: "https://flowise-zvhg.onrender.com",
         chatflowConfig: {
           sessionId: username,
           vars: {
