--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <div class="container">
     <!-- <img src="your-photo.jpg" alt="Avatar" class="avatar mb-2"> Uncomment & add your photo -->
     <h1 class="fw-bold mb-2">Tong Chun Mun</h1>
-    <p class="lead mb-3">Data Science Student & Aspiring Web Developer</p>
+    <p class="lead mb-3">Data Science Student & Aspiring Developer</p>
     <div class="contact-info mb-2">
       <span class="me-2">📍 Kuala Lumpur, Malaysia</span>
       <span class="me-2">| <a href="mailto:cmtong123@gmail.com" style="color: #f0faff;">cmtong123@gmail.com</a></span>
